--- a/docs/4/configuration/_options.yml
+++ b/docs/4/configuration/_options.yml
@@ -157,16 +157,18 @@ details: |+
 
   The xlinequit field can contain any of the following template variables:
 
-  Variable    | Description
-  ----------- | -----------
-  %created%   |  The date/time at which the X-line was created.
-  %duration%  |  The duration of the X-line.
-  %expiry%    |  The date/time at which the X-line expires.
-  %fulltype%  |  The type of X-line which was matched, suffixed with  "-lined" if its name is one or two characters.
-  %reason%    |  The reason the X-line was added.
-  %remaining% |  The duration remaining on the X-line.
-  %setter%    |  The name of the X-line setter.
-  %type%      |  The type of X-line that was matched.
+  Variable         | Description
+  ---------------- | -----------
+  %created%        | The date/time at which the X-line was created.
+  %duration%       | The duration of the X-line.
+  %duration.long%  | [**New in v4.7.0!**](/4/change-log/#inspircd-470) The long duration of the X-line.
+  %expiry%         | The date/time at which the X-line expires.
+  %fulltype%       | The type of X-line which was matched, suffixed with  "-lined" if its name is one or two characters.
+  %reason%         | The reason the X-line was added.
+  %remaining%      | The duration remaining on the X-line.
+  %remaining.long% | [**New in v4.7.0!**](/4/change-log/#inspircd-470) The long duration remaining on the X-line.
+  %setter%         | The name of the X-line setter.
+  %type%           | The type of X-line that was matched.
 
 example: |-
   ```xml
