Avoid specifying cafile in the ssl_gnutls config.

--- a/docs/3/modules/ssl_openssl.yml
+++ b/docs/3/modules/ssl_openssl.yml
@@ -221,7 +221,7 @@ configuration:
     ```xml
     <sslprofile name="Clients"
                 provider="openssl"
-                cafile="ca.pem"
+                cafile=""
                 certfile="cert.pem"
                 crlfile=""
                 ciphers="DEFAULT"
