--- a/docs/4/modules/ssl_openssl.yml
+++ b/docs/4/modules/ssl_openssl.yml
@@ -214,7 +214,7 @@ configuration:
     ```xml
     <sslprofile name="Clients"
                 provider="openssl"
-                cafile="ca.pem"
+                cafile=""
                 certfile="cert.pem"
                 crlfile=""
                 ciphers="DEFAULT"
