Strip the v3 docs down to the bare essentials.
The remaining documentation will be removed as soon as I work out
a way to make it available in an offline form.

--- a/docs/3/modules/censor.yml
+++ b/docs/3/modules/censor.yml
@@ -2,7 +2,7 @@ name: censor
 
 introduction: |-
   !!! warning ""
-      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+      This module is deprecated and has been [moved to inspircd-contrib](/4/moved-modules) in the next major version of InspIRCd.
 
       You should consider using [the filter module](/3/modules/filter) instead.
 
