--- a/docs/3/modules/regex_pcre.yml
+++ b/docs/3/modules/regex_pcre.yml
@@ -2,7 +2,7 @@ name: regex_pcre
 
 introduction: |-
   !!! warning ""
-      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+      This module is deprecated and has been [moved to inspircd-contrib](/4/moved-modules) in the next major version of InspIRCd.
 
       You should consider using [the regex_pre2 module](/3/modules/regex_pcre2) instead.
 
