--- a/docs/3/modules/ssl_mbedtls.yml
+++ b/docs/3/modules/ssl_mbedtls.yml
@@ -2,7 +2,7 @@ name: ssl_mbedtls
 
 introduction: |-
   !!! warning ""
-      This module is deprecated and has been moved to [inspircd-contrib](/3/module-manager) in the next major version of InspIRCd.
+      This module is deprecated and has been [moved to inspircd-contrib](/4/moved-modules) in the next major version of InspIRCd.
 
       You should consider using [the ssl_gnutls module](/3/modules/ssl_gnutls) instead.
 
