--- a/docs/4/commands/_kline.yml
+++ b/docs/4/commands/_kline.yml
@@ -1,11 +1,11 @@
 name: KLINE
 oper_only: true
 syntax: >-
-  <ident@host>[,<ident@host>]+ [[<duration>] <reason>]
+  <user@host>[,<user@host>]+ [[<duration>] <reason>]
 description: |-
-  If `<ident@host>` and `<reason>` are specified then bans an ident@host mask from connecting to the local server. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero or (since v4.6.0) is not specified then the K-line will be permanent.
+  If `<user@host>` and `<reason>` are specified then bans an user@host mask from connecting to the local server. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero or (since v4.6.0) is not specified then the K-line will be permanent.
 
-  Otherwise, if just `<ident@host>` is specified, removes a local server ban on an ident@host mask.
+  Otherwise, if just `<user@host>` is specified, removes a local server ban on an user@host mask.
 example:
 - description: |-
     K-lines sadie@example.com for one day with the reason "Testing"
