--- a/docs/4/configuration/_connect.yml
+++ b/docs/4/configuration/_connect.yml
@@ -171,7 +171,7 @@ example: |-
            reason="The 6bone address space is deprecated">
   ```
 
-  Defines a TLS (SSL) only connect class and then a general connect class to inherit from:
+  Defines a TLS only connect class and then a general connect class to inherit from:
 
   ```xml
   <connect name="Secure"
