--- a/docs/4/modules/starttls.yml
+++ b/docs/4/modules/starttls.yml
@@ -13,7 +13,7 @@ configuration:
     required: false
     default: null
     description: |-
-      The name of the TLS (SSL) profile to use for STARTTLS clients.
+      The name of the TLS profile to use for STARTTLS clients.
   details: ""
   example: |-
     ```xml
@@ -23,4 +23,4 @@ configuration:
 client_caps:
 - name: '[tls](https://ircv3.net/specs/extensions/tls.html)'
   description: |-
-    Allows plaintext connections to upgrade to TLS (SSL).
+    Allows plaintext connections to upgrade to TLS.
