--- a/docs/3/modules/chanhistory.yml
+++ b/docs/3/modules/chanhistory.yml
@@ -20,7 +20,7 @@ configuration:
     default: 'No'
     added: 3.9.0
     description: |-
-      Whether user mode `N` (nohistory) is enabled. You must restart after changing this setting for it to be applied.
+      Whether user mode `N` (nohistory) is enabled. You must reload this module after changing this setting for it to be applied. Channel history will be lost.
   - name: maxlines
     type: Number
     required: false
