--- a/docs/3/modules/noctcp.yml
+++ b/docs/3/modules/noctcp.yml
@@ -13,7 +13,7 @@ configuration:
     required: false
     default: 'No'
     description: |-
-      Whether user mode `T` (u_noctcp) is enabled. You must restart after changing this setting for it to be applied.
+      Whether user mode `T` (u_noctcp) is enabled. You must reload this module after changing this setting for it to be applied.
   details: ""
   example: |-
     ```xml
